# clean_pacman_cache_dir

./: AbsolutePath.h  Architectures.cpp  Architectures.h  CMakeLists.txt  CODE_OF_CONDUCT  CONTRIBUTING.md  ExtendedInstallationPackageFile.cpp  ExtendedInstallationPackageFile.h  Extensions.cpp  Extensions.h  FileMover.cpp  FileMover.h  FileMoverSingleton.cpp  FileMoverSingleton.h  Filename.cpp  Filename.h  FinderOfInstallationPackageFilesForPackages.cpp  FinderOfInstallationPackageFilesForPackages.h  IgnoredPackageName.cpp  IgnoredPackageName.h  IgnoredPackageNameComparatorPredicate.h  IgnoredPackageNames.cpp  IgnoredPackageNames.h  IgnoredPackageNamesEqualityComparator.h  LocallyInstalledPackage.cpp  LocallyInstalledPackage.h  LocallyInstalledPackage__refactored__.h  LocallyInstalledPackage_refactored_.cpp  LocallyInstalledPackage_refactored_.h  LocallyInstalledPackages.cpp  LocallyInstalledPackages.h  MatchFinderForPackageFilesToLocallyInstalledPackages.cpp  MatchFinderForPackageFilesToLocallyInstalledPackages.h  MoverOfInstallationPackageFile.cpp  MoverOfInstallationPackageFile.h  MoverOfInstallationPackageFiles.cpp  MoverOfInstallationPackageFiles.h  Package.cpp  Package.h  PackageComparator.h  (+44 more)
helper_scripts/: check_free_space_and_content_of_directories_for_package_managers.sh
logs/: clean_pacman_cache_dir-iterate_through_multpile_dirs_with_installation_package_files-output-pikaur_cache_dirs_only.txt
src/: AbsolutePath.cpp  AbsolutePath.h  ExtendedInstallationPackageFile.h  FileMoverSingleton.cpp  Filename.h  IgnoredPackageName.cpp  IgnoredPackageName.h  LocallyInstalledPackage.cpp  LocallyInstalledPackage.h  LocallyInstalledPackages.cpp  LocallyInstalledPackages.h  MatchFinderForPackageFilesToLocallyInstalledPackages.cpp  MatchFinderForPackageFilesToLocallyInstalledPackages.h  MoverOfInstallationPackageFiles.cpp  MoverOfInstallationPackageFiles.h  PackageName.h  PackageNameMissing.cpp  PackageNameMissing.h  PackageVersion.cpp  PackageVersion.h  PackageWithInferredName.cpp  PackageWithInferredNameAndVersion.h  Paths.cpp  Paths.h  TerminalAndLoggerSingleton.cpp  main.cpp
